# Studiply

./: .gitignore  .vercelignore  ADD_AUTHORIZED_DOMAIN.md  AGORA_CRITICAL_FIX.md  AGORA_CRITICAL_SOLUTION.md  AGORA_QUICK_SETUP.md  AGORA_SETUP_GUIDE.md  AGORA_TROUBLESHOOTING.md  CUSTOM_DOMAIN_OAUTH.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  EMAILJS_REAL_EMAIL_SETUP.md  EMAILJS_SETUP.md  EMAILJS_TEMPLATES_DESIGN.md  EMAILJS_TEMPLATE_FIX.md  EMAILJS_TEMPLATE_FIX_GUIDE.md  EMAIL_SETUP_GUIDE.md  EMAIL_SPAM_PREVENTION_GUIDE.md  ENABLE_GOOGLE_LOGIN.md  FIND_GOOGLE_CLOUD_PROJECT.md  FIREBASE_SETUP_FIX.md  FIX_CALENDAR_SPAM_ISSUE.md  FIX_EMAILJS_TEMPLATE.md  FIX_SPAM_ISSUES.md  FIX_VERIFICATION_CODE_DISPLAY.md  GITHUB_SETUP.md  GMAIL_APP_PASSWORD_SETUP.md  GOOGLE_LOGIN_SETUP.md  GOOGLE_LOGIN_TROUBLESHOOTING.md  GRAVATAR_QUICK_START.md  GRAVATAR_SETUP_CHECKLIST.md  GRAVATAR_TROUBLESHOOTING.md  RAILWAY_DEPLOY.md  README.md  README_简单开始.md  REMINDER_TEST_GUIDE.md  RENDER_ENV_SETUP.md  RESEND_CONFIGURATION.md  RESEND_SETUP_GUIDE.md  SET_EMAIL_AVATAR_GUIDE.md  (+35 more)
StudiplyLauncher/: README.md  test.html
assets/: agora-b6d169b2.js  firebase-48788c29.js  index-089c963b.css  index-0b7dd82a.js  index-0bc1dbb6.js  index-0c08dfd8.css  index-0cdbf59b.css  index-10d49a84.js  index-12b393c0.css  index-14086b7b.js  index-1a11be1e.js  index-6b0816a6.js  index-beaf31b1.js  index-c1525ef7.css  index-c18d4c8c.js  index-d2175ac4.js  index-da21b5ba.js  index-e7db9e1d.js  index-e7f32621.js  (+5 more)
studiply-mac/src-tauri/: Cargo.toml  tauri.conf.json
studiply-mac/src-tauri/src/: lib.rs  main.rs
(+232 files in other folders)
