[package]
name = "studiply"
version = "0.1.0"
description = "Studiply Focus Mode for macOS"
authors = ["Studiply"]
edition = "2021"

[lib]
name = "studiply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
